5-desafio/k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/craftech-net: "true"
        io.kompose.service: backend
    spec:
      containers:
        - image: beto2323/craftech-backend:latest
          name: backend
          ports:
            - containerPort: 8000
          resources: {}
      restartPolicy: Always
status: {}
