5-desafio/k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/craftech-net: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - image: beto2323/craftech-frontend:latest
          name: frontend
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
