5-desafio/k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: backend
  name: backend
spec:
  type: NodePort
  ports:
    - name: "8000"
      port: 7000
      targetPort: 8000
  selector:
    io.kompose.service: backend
status:
  loadBalancer: {}
