5-desafio/k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  type: NodePort
  ports:
    - name: "3000"
      port: 5050
      targetPort: 3000
  selector:
    io.kompose.service: frontend
status:
  loadBalancer: {}
