5-desafio/k8s/backend-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: backend
  annotations:
    kubernetes.io/ingress.class: "public"
spec:
  rules:
    - host: backend.craftech.io
      http:
        paths:
          - path: /
            backend:
              serviceName: backend
              servicePort: 5050
