5-desafio/k8s/frontend-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/ingress.class: "public"
spec:
  rules:
    - host: frontend.craftech.io
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend
              servicePort: 5050
